[package]
name = "scottdb"
version = "0.1.0"
authors = ["ICEY <icey@icey.tech>"]
edition = "2018"

license-file = "LICENSE"
description = "An semi-experimental write optimized key-value database"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egconf = "0.1.0"
crc = "1.8.1"
rand = "0.7.0"
lru = "0.4.3"
# cnm 傻逼 Rust 标准库, 把这么重要的玩意给老子 deprecate 了
std-semaphore = "0.1.0"
